# bpf90tools

./: .gitignore  README.md  __init__.py  airemlf90.py  blupf90.py  blupf90Py.py  generateparams.py  irunapp.py  keyword.py  keywordparam.py  outputhandler.py  params.py  parseraIreml.py  parserparams.py  parserped.py  parserreml.py  parsersol.py  pyproject.toml  remlf90.py  renumf90.py  requirements.txt  runairemlf90.py  runblupf90.py  runremlf90.py  runrenumf90.py  tempconfig.py
.github/workflows/: linux.y  linux.yml  windows.y  windows.yml
docs/: bpf90tools.parsers.rst  bpf90tools.rst  bpf90tools.tools.rst  bpf90tools.utils.rst  conf.py  examples.rst  exmcreateparam.rst  exmparsing.rst  index.rst  install.rst  intro.rst  modules.rst  preparation.rst  usage.rst  useprogf90.rst
parsers/: __init__.py  _iparser.py  _keywords.py  _parserparams.py  _parserped.py  _parsersol.py  _parservar.py  _pparams.py  _pped.py  _psol.py  keyword.py  parser.py  parseraireml.py  parserparams.py  parserped.py  parserreml.py  parsersol.py  settingsf90.py
parsers/tests/: __init__.py  test_paireml.py  test_ppar.py  test_pped.py  test_psol.py  test_pvar.py
src/bpf90tools/: __init__.py
tests/parsers/: __init__.py  test_ppar.py  test_pped.py  test_psol.py  test_pvar.py
tests/tools/: __init__.py  test_airemlf90.py  test_blupf90.py  test_params.py  (+2 more)
tools/: __init__.py  _airemlf90.py  _blupf90.py  _if90.py  _params.py  _remlf90.py  _renumf90.py  blupf90.py  params.py  remlf90.py  renumf90.py  settings.py  tempconfig.py
utils/: __init__.py  __os.py  _checkmixin.py  _utils.py
(+49 files in other folders)
