[build-system]
requires = [
    "setuptools>=75",
    "setuptools-scm>=8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "f90tools"
version = "0.0.1"
description = ""
authors = [
    {name = "Igor", email = "igor.loschinin@gmail.com"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy>=2.2.2',
    'pandas>=2.2.3',
    'six>=1.17.0',
    'pydantic>=2.10.6',
    'pytest>=8.3.4',
    'deepdiff>=8.2.0',
]

[project.urls]
"Homepage" = "https://github.com/IgorekLoschinin/bpf90tools"
